# ome-zarr-vole-tools

./: .gitignore  README.md  example_config.yaml  pyproject.toml
src/ome_zarr_vole_tools/: __init__.py  __main__.py  cli.py  config.py  converter.py  url.py  utils.py
tests/: conftest.py  test_config.py  test_converter.py  test_timelapse.py  test_url.py
